--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -125,7 +125,7 @@
     <h2 class='title'>ピックアップカテゴリー</h2>
     <%= link_to '新規投稿商品', new_product_path, class: "subtitle" %>
     <ul class='item-lists'>
-    <% if  @products[] != nil %>
+    <% if  @products[0] != nil %>
       <% @products.each do |product| %>
       <li class='list'>
         <%= link_to "#" do %>
