--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,7 +29,7 @@
     <p class="or-text">or</p>
     <%= link_to "削除", product_path, method: :delete, class:"item-destroy" %>
 <% elsif user_signed_in? %>   
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+    <%= link_to "購入画面に進む", new_product_buyer_path(@product.id),class:"item-red-btn"%>
 <% end %>
 
     <div class="item-explain-box">
