--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,11 +8,11 @@
     </h2>
     <div class="item-img-content">
       <%= image_tag @product.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @product.buyer.present? %>
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,13 +23,14 @@
         <%= @product.deliver_fee.name %>
       </span>
     </div>
-
 <% if user_signed_in? &&  current_user.id  == @product.user.id %>
+<% if @product.buyer.present? %>
     <%= link_to "商品の編集", edit_product_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", product_path, method: :delete, class:"item-destroy" %>
 <% elsif user_signed_in? %>   
     <%= link_to "購入画面に進む", new_product_buyer_path(@product.id),class:"item-red-btn"%>
+    <% end %>
 <% end %>
 
     <div class="item-explain-box">
