--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,13 +24,13 @@
       </span>
     </div>
 <% if user_signed_in? &&  current_user.id  == @product.user.id %>
-<% if @product.buyer.present? %>
+<% if @product.buyer.blank? %>
     <%= link_to "商品の編集", edit_product_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
     <%= link_to "削除", product_path, method: :delete, class:"item-destroy" %>
 <% elsif user_signed_in? %>   
     <%= link_to "購入画面に進む", new_product_buyer_path(@product.id),class:"item-red-btn"%>
-    <% end %>
+<% end %>
 <% end %>
 
     <div class="item-explain-box">
